portfolio/programming/C/Workspace/.metadata/.plugins/org.eclipse.cdt.ui/ex-firstnode.build.log
15:05:44 **** Incremental Build of configuration Debug for project ex-firstnode ****
make all 
Building file: ../ex-firstnode.c
Invoking: Cygwin C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"ex-firstnode.d" -MT"ex-firstnode.d" -o "ex-firstnode.o" "../ex-firstnode.c"
cygwin warning:
  MS-DOS style path detected: D:\1809SWJ\Workspace\ex-firstnode\Debug
  Preferred POSIX equivalent is: /cygdrive/d/1809SWJ/Workspace/ex-firstnode/Debug
  CYGWIN environment variable option "nodosfilewarning" turns off this warning.
  Consult the user's guide for more details about POSIX paths:
    http://cygwin.com/cygwin-ug-net/using.html#using-pathnames
../ex-firstnode.c: In function 'main':
../ex-firstnode.c:183:2: warning: passing argument 1 of 'deleteNode' from incompatible pointer type [enabled by default]
  deleteNode("¼ö");
  ^
../ex-firstnode.c:119:6: note: expected 'struct listNode *' but argument is of type 'char *'
 void deleteNode(listNode *pre, char*x){
subdir.mk:18: recipe for target 'ex-firstnode.o' failed
      ^
../ex-firstnode.c:183:2: error: too few arguments to function 'deleteNode'
  deleteNode("¼ö");
  ^
../ex-firstnode.c:119:6: note: declared here
 void deleteNode(listNode *pre, char*x){
      ^
make: *** [ex-firstnode.o] Error 1

15:05:44 Build Finished (took 260ms)

